--- a/mysite/userinfo/templates/index.html
+++ b/mysite/userinfo/templates/index.html
@@ -4,3 +4,23 @@
 	<input type="submit" value="Search">
 	{% csrf_token %}
 </form>
+<br><br>
+
+<table>
+	<thead>  
+    	<tr>
+        	<th> Username </th>
+            <th> Name </th>
+            <th> Location </th>
+            <th> Count of public gists </th>
+            <th> Count of public repos</th>
+        </tr>
+    </thead>
+    <tbody>
+	    {% for info in usr_info %}
+		    <tr>
+			    <td>{{info.usrnm}}</td>>
+		    </tr>
+	    {% endfor %}
+    </tbody>
+ </table> 
