--- a/mysite/userinfo/templates/index.html
+++ b/mysite/userinfo/templates/index.html
@@ -1,12 +1,11 @@
 <h1> Hello from index file </h1>
 <form method="POST">	
 	<input type="text" name="usrname" placeholder="Enter a username ">
-	<input type="submit" value="Search">
+    <button name="" type="submit">Submit</button>
 	{% csrf_token %}
 </form>
 <br><br>
-
-<table cellpadding="50">
+<table cellpadding="40">
 	<thead>  
     	<tr>
         	<th> Username </th>
@@ -14,15 +13,21 @@
             <th> Location </th>
             <th> Count of public gists </th>
             <th> Count of public repos</th>
+            <th> Followers</th>
+            <th> Following</th>
         </tr>
     </thead>
-    <tbody>
+    <tbody>        
 	    <tr>
-			<td>{{usr_info.usrnm}}</td>
-			<td>{{usr_info.name}}</td>
-			<td>{{usr_info.location}}</td>
-			<td>{{usr_info.publicGistsCount}}</td>
-			<td>{{usr_info.publicReposCount}}</td>
-		</tr>	    
+            {% if usr_info %}
+            <td>{{usr_info.usr_nm}}</td>
+            <td>{{usr_info.user_name}}</td>
+            <td>{{usr_info.location}}</td>
+            <td>{{usr_info.public_gists_count}}</td>
+            <td>{{usr_info.public_repos_count}}</td>
+            {% elif error %}
+            <td> {{error}} </td>
+            {% endif %}
+		</tr>	            
     </tbody>
  </table> 
