--- a/mysite/userinfo/templates/repo.html
+++ b/mysite/userinfo/templates/repo.html
@@ -12,14 +12,19 @@
     </thead>
     <tbody>        
 	    <tr>
-            {% if usr_info %}
-            <td>{{usr_info.usr_nm}}</td>
-            <td>{{usr_info.user_name}}</td>
-            <td>{{usr_info.location}}</td>
-            <td>{{usr_info.public_gists_count}}</td>
-            <td>{{usr_info.public_repos_count}}</td>
+            {% if repo_info %}
+                <td>{{repo_info.repo_name}}</td>
+                <td>{{repo_info.repo_url}}</td>
+                <td>{{repo_info.repo_language}}</td>
+                <td>
+                    {% if branch_info %}
+                        {% for details in branch_info %}
+                            <span><a href='./branch/?branch_id={{details.id}}'>{{details.branch_name}}</a><br></span>
+                        {% endfor %}
+                    {% endif %}
+                </td>
             {% elif error %}
-            <td> {{error}} </td>
+                <td> {{error}} </td>
             {% endif %}
 		</tr>	            
     </tbody>
