--- a/mysite/userinfo/templates/repo.html
+++ b/mysite/userinfo/templates/repo.html
@@ -19,7 +19,7 @@
                 <td>
                     {% if branch_info %}
                         {% for details in branch_info %}
-                            <span><a href='./branch/?branch_id={{details.id}}'>{{details.branch_name}}</a><br></span>
+                            <span>{{details.branch_name}}<br></span>
                         {% endfor %}
                     {% endif %}
                 </td>
